manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvp-thymeleaf-jdk17
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvp-thymeleaf-jdk17
  template:
    metadata:
      labels:
        app: mvp-thymeleaf-jdk17
    spec:
      containers:
      - name: mvp-thymeleaf-jdk17
        image: axccoe/mvp-thymeleaf-jdk17
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 3
          successThreshold: 1
          httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          failureThreshold: 3
          successThreshold: 1
          httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 3
        # resources:
        #   limits:
        #     cpu: 1000m
        #     memory: 512Mi
        #   requests:
        #     cpu: 200m
        #     memory: 256Mi
